<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/config_display_fp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/choose_fp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/config_dev_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/config_dev_fp_standar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/config_device_radio_bg"
            android:gravity="center"
            android:text="@string/config_display_standar"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/config_dev_fp_save_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@null"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/config_device_radio_bg"
            android:gravity="center"
            android:text="@string/config_display_save_battery"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/config_dev_fp_super_save_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@null"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/config_device_radio_bg"
            android:gravity="center"
            android:text="@string/config_display_super_save_battery"
            android:textColor="@drawable/radio_text_color"
            android:textSize="20sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkgray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/should_upload_pic_every_day"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pop_detail_record_pic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right">
            <ToggleButton
                android:id="@+id/config_dev_need_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switcher_off"
                android:textOn="@null"
                android:textOff="@null"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkgray" />

    <Button
        android:id="@+id/config_device_save_config"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/save" />

</LinearLayout>
