<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/home_main_content_offset">

        <com.elook.client.ui.MyViewPager
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/navigation_bar_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_main_content_height"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/navigation_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/home_main_content_button_offset"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_home_icon"
                android:gravity="center"
                android:onClick="onTabClicked"
                android:text="@string/main_fragment"
                android:textColor="@drawable/nav_text_color" />


            <TextView
                android:id="@+id/navigation_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/home_main_content_button_offset"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_message_icon"
                android:gravity="center"
                android:onClick="onTabClicked"
                android:text="@string/notification"
                android:textColor="@drawable/nav_text_color" />


            <TextView
                android:id="@+id/navigation_serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/home_main_content_button_offset"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_serve_icon"
                android:gravity="center"
                android:onClick="onTabClicked"
                android:text="@string/service"
                android:textColor="@drawable/nav_text_color" />


            <TextView
                android:id="@+id/navigation_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/home_main_content_button_offset"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_my_icon"
                android:gravity="center"
                android:onClick="onTabClicked"
                android:text="@string/mine"
                android:textColor="@drawable/nav_text_color" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
